# flower-benchmarks

./: README.md  benchmarks_analysis.ipynb  pyproject.toml  run_1_benchmarks.ipynb  run_2_benchmarks.ipynb
flower_benchmarks/: __init__.py  client_app.py  server_app.py  task.py
flower_benchmarks/plugins/yolov5/: dataset.py  download_coco128.sh  install_yolov5_deps.sh  model.py  testing.py
